manifests/manifest-env.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leocinema
